syntax = "proto3";

package io.typestream.grpc;

option java_package = "io.typestream.grpc.filesystem_service";

option go_package = "github.com/typestreamio/typestream/cli/pkg/filesystem_service";

service FileSystemService {
    rpc Mount(MountRequest) returns (MountResponse) {}
    rpc Unmount(UnmountRequest) returns (UnmountResponse) {}
    rpc Ls(LsRequest) returns (LsResponse) {}
}

message MountRequest {
    string user_id = 1;
    string config = 2;
}

message MountResponse {
    bool success = 1;
    string error = 3;
}

message UnmountRequest {
    string user_id = 1;
    string endpoint = 2;
}

message UnmountResponse {
    bool success = 1;
    string error = 3;
}

message LsRequest {
    string user_id = 1;
    string path = 2;
}

message LsResponse {
    repeated string files = 1;
    string error = 2;
}


